Fixed layout bug.

--- a/app/assets/styles/layout/_site-header.scss
+++ b/app/assets/styles/layout/_site-header.scss
@@ -23,8 +23,13 @@
         width: 50px;
         height: 50px;
         position: absolute;
-        top: 0px;
-        right: 0px;
+        top: -10px;
+        right: 10px;
+
+        @include atSmall {
+            top: 0px;
+            right: 0px;
+        }
 
         &:hover {
             cursor: pointer;
